[gd_scene load_steps=8 format=3 uid="uid://t25mflhimqla"]

[ext_resource type="Script" uid="uid://bqf5mn46g7vbw" path="res://scripts/battleHUD.gd" id="1_m411j"]
[ext_resource type="Script" uid="uid://dlv5hyc4jm6q6" path="res://scripts/player_health_bar.gd" id="2_hwolu"]
[ext_resource type="Theme" uid="uid://c0cpjwh8n0ilr" path="res://styleboxes/AttackButton.tres" id="2_v1psi"]
[ext_resource type="Theme" uid="uid://d2t15ny18dhxl" path="res://styleboxes/HealButton.tres" id="3_h8yng"]
[ext_resource type="Script" uid="uid://qhx8pkr1aa6a" path="res://scripts/enemy_health_bar.gd" id="3_ksnj4"]
[ext_resource type="Theme" uid="uid://22tpgihx7djv" path="res://styleboxes/ItemsButton.tres" id="4_hisfm"]
[ext_resource type="Theme" uid="uid://b4hvr54qlcnuc" path="res://styleboxes/FleeButton.tres" id="5_p5i85"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_m411j")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 542.0
offset_top = -218.0
grow_horizontal = 2
grow_vertical = 0

[node name="Attack" type="Button" parent="Panel"]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 593.0
offset_bottom = 213.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2_v1psi")
theme_override_font_sizes/font_size = 70

[node name="Heal" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 5.0
offset_right = 288.0
offset_bottom = 213.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_h8yng")
theme_override_font_sizes/font_size = 70

[node name="Items" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -108.0
offset_right = 593.0
offset_bottom = 100.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme = ExtResource("4_hisfm")
theme_override_font_sizes/font_size = 70

[node name="Flee" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -108.0
offset_right = 288.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_p5i85")
theme_override_font_sizes/font_size = 70

[node name="PlayerHealth" type="ProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_right = 490.0
grow_vertical = 0
theme = ExtResource("4_hisfm")
script = ExtResource("2_hwolu")

[node name="EnemyHealth" type="ProgressBar" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -490.0
offset_bottom = 68.0
grow_horizontal = 0
theme = ExtResource("4_hisfm")
value = 40.0
script = ExtResource("3_ksnj4")

[connection signal="updateEnemyHealth" from="." to="EnemyHealth" method="_on_canvas_layer_update_enemy_health"]
[connection signal="updatePlayerHealth" from="." to="PlayerHealth" method="_on_canvas_layer_update_player_health"]
[connection signal="pressed" from="Panel/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Panel/Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="Panel/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="Panel/Flee" to="." method="_on_flee_pressed"]
